# livefetch

./: .gitignore  Cargo.toml  LICENSE  README.md  THIRD-PARTY-LICENSES
.github/workflows/: release.yml
packaging/arch/livefetch-bin/: PKGBUILD
packaging/arch/livefetch-git/: PKGBUILD
src/: cli.rs  config.rs  main.rs
src/image/: chroma.rs  loader.rs  mod.rs
src/info/: mod.rs  modules.rs
src/info/platform/: common.rs  fallback.rs  linux.rs  macos.rs  mod.rs  windows.rs
src/layout/: mod.rs
src/logo/: data.rs  mod.rs
src/terminal/: detect.rs  mod.rs  size.rs
src/terminal/renderers/: ansi.rs  iterm2.rs  kitty.rs  mod.rs
